# mitzu

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/analytics/: _filters.py  anomaly_flags.py  avg_speed_by_hour.py  borough_flow.py  congestion_trend.py  demand_anomaly.py  dow_revenue_heatmap.py  fare_components.py  fare_vs_distance.py  payment_trend.py  tip_by_zone.py  tip_rate_by_payment.py  top_pickup_zones.py  trip_count_by_hour.py  zone_efficiency.py
backend/app/api/routes/: analytics.py  health.py  ingest.py  zones.py
backend/app/auth/: password.py  router.py  utils.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  ingestion_log.py  trip.py  user.py  zone.py
backend/app/schemas/: analytics.py  ingest.py
backend/app/services/: analytics_executor.py  ingestion.py  zone_seeder.py
backend/migrations/: env.py
backend/migrations/versions/: 4e53e9c8a7d8_initial_schema.py
backend/tests/: conftest.py  test_analytics_executor.py  test_analytics_modules.py  test_auth.py  test_ingestion.py
docs/: architecture.md  deployment.md  learnings.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: analytics.ts  auth.ts  client.ts
frontend/src/components/: PrivateRoute.tsx
infra/terraform/: main.tf  outputs.tf  variables.tf
prompts/: init_prompt.md  iterations.md  spec.md
(+30 files in other folders)
